# mugen

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py
mugen/: __init__.py  adapters.py  api.py  connect.py  connection_pool.py  cookies.py  exceptions.py  models.py  proxy.py  session.py  structures.py  utils.py
test/: connect_method.py  cookies.py  get.py  head.py  memory.py  post.py  proxy.py  recycle.py  redirect.py  timeout.py
tests/: tests.py
