[tool.poetry]
name = "mugen"
homepage = "https://github.com/PeterDing/mugen"
version = "0.6.1"
description = "Mugen - HTTP for Asynchronous Requests"
authors = ["PeterDing <dfhayst@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"
httptools = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
